--- a/Automated/ansible/inventory/vm/example_group_vars/all-caliper.yaml
+++ b/Automated/ansible/inventory/vm/example_group_vars/all-caliper.yaml
@@ -11,16 +11,11 @@ dltRepo: https://github.com/hyperledger/fabric
 dltBranch: main
 dltDest: /root/src/github.com/hyperledger/fabric
 
-# checkout-and-build-fsc-nodes.yaml
-fscRepo: https://github.com/davidkel/sandbox
-fscBranch: master
-fscDest: /root/fsc
-fscPath: /iou
-
-# checkout-chaincode
+# checkout-chaincode: caliper fixed-asset chaincode
 chainDest: '/root/caliper-benchmarks'
 chainRepo: https://github.com/hyperledger/caliper-benchmarks
 chainBranch: 'main'
+chainPath: src/fabric/api/fixed-asset-base/go
 
 # run-caliper-benchmarks
 benchDest: '/root/caliper-benchmarks'
@@ -41,7 +36,7 @@ preferred_max_bytes: 512 KB
 ccName: fixed-asset
 ccVersion: 1.0.0
 # has to be available on the peer (what is the path relative to ?) and is pre-vendored
-ccPath: '{{ benchDest }}/src/fabric/api/fixed-asset-base/go'
+ccPath: '{{ chainDest }}/{{ chainPath }}'
 endorsementPolicy: 'OR ("peerOrg0MSP.member","peerOrg1MSP.member")'
 ccInitArgs: '{"Args": ["init"]}'
 ccQueryArgs: '{"Args": ["emptycontract"]}'
